--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
 
   rxdart: ^0.28.0
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
