--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     path: ".."
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
+  jwt_decode: ^0.3.1
+  app_links: ^6.3.2
 
 dev_dependencies:
   flutter_test:
