--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   equatable: ^2.0.5
   jwt_decode: ^0.3.1
   app_links: ^6.3.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
