Remove bloc dependency

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,11 @@ dependencies:
     sdk: flutter
 
   rxdart: ^0.28.0
-  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  bloc: ^8.1.4
 
 flutter:
   uses-material-design: true
