--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ topics:
   - event-driven-design
   - reactive-programming
   - bloc
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ">=2.17.0 <4.0.0"
