--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ migrate_working_dir/
 .dart_tool/
 .flutter-plugins
 .flutter-plugins-dependencies
+.packages
 .pub-cache/
 .pub/
 /build/
@@ -37,7 +38,8 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
-# Android Studio will place build artifacts here
+/ios
+/android
 /android/app/debug
 /android/app/profile
 /android/app/release
